--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							<li role="presentation"><a href="index.html" class="active">Home</a></li>
 							<li role="presentation"><a href="mission.html">Mission Statement</a></li>
 							<li role="presentation"><a href="services.html">Services</a></li>
-							<li role="presentation"><a href="gallery.html">Gallery</a></li>
+							<li role="presentation"><a href="gallery.html">About Us</a></li>
 							<li role="presentation"><a href="contact.html">Contact</a></li>						
 						</ul>
 					</div>
@@ -49,12 +49,16 @@
             </div><!--/.container-->
         </nav><!--/nav-->		
     </header><!--/header-->	
-	
-	<div class="slider">		
+	<div>
+		<div class="container"
+	<img src="roundtableart1.jpg">
+	</div>
+
+	<!--<div class="slider">		
 		<div id="mission-slider">
 			<div id="carousel-slider" class="carousel slide" data-ride="carousel">
 				<!-- Indicators -->
-				<ol class="carousel-indicators visible-xs">
+			<!--	<ol class="carousel-indicators visible-xs">
 					<li data-target="#carousel-slider" data-slide-to="0" class="active"></li>
 					<li data-target="#carousel-slider" data-slide-to="1"></li>
 					<li data-target="#carousel-slider" data-slide-to="2"></li>
@@ -125,10 +129,10 @@
 				<a class=" right carousel-control hidden-xs"href="#carousel-slider" data-slide="next">
 					<i class="fa fa-angle-right"></i> 
 				</a>
-			</div> <!--/#carousel-slider-->
+			</div> /#carousel-slider
 		</div><!--/#about-slider-->
-	</div><!--/#slider-->
-	
+		<!--/#slider-->
+
 	<div class="mission">
 		<div class="container">
 			<div class="text-center">
