--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,9 @@
                             <textarea name="message" id="message" required="required" class="form-control" rows="8"></textarea>
                         </div>                        
                         <div class="form-group">
+                        	<form action="mailto:jboyarsky@rgbconsultinggroup.com" method="post" enctype="text/plain">
                             <button type="submit" name="submit" class="btn btn-primary btn-lg" required="required">Submit message</button>
+
                         </div>
                     </div>
                 </form> 
