--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="css/animate.css">
 	<link href="css/animate.min.css" rel="stylesheet"> 
 	<link href="css/style.css" rel="stylesheet" />	
+	.full { background-color: white; width: 100%; height: 100%; }
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -50,7 +51,7 @@
         </nav><!--/nav-->		
     </header><!--/header-->	
 	<div>
-		<div class="container">
+		<div class="full">
 	<img src="roundtableart1.jpg">
 	</div>
 
@@ -142,10 +143,10 @@
 				</div>
 		
 				<div class="col-md-6 col-sm-6 col-xs-6">
-					<div class="btn-gamp"><a href="#">Learn More</a></div>
+					<div class="btn-gamp"><a href="service.html">Learn More</a></div>
 				</div>
 				<div class="col-md-6 col-sm-6 col-xs-6">
-					<div class="gamp-btn"><a href="#">download</a></div>
+					<div class="gamp-btn"><a href="contact.html">Contact Us</a></div>
 				</div>
 				
 			</div>	
@@ -154,6 +155,7 @@
 	<hr>
 	
 	<div class="services">
+		<div class = id "mission">
 		<div class="container">
 			<div class="text-center">
 				<h2>consectetur adipisicing elit</h2>
@@ -178,6 +180,7 @@
 				<h3>Easy to Customize</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nam numquam voluptates cumque inventore, quibusdam corporis consequatur amet.</p>
 			</div>
+		</div>
 		</div>			
 	</div>
 	
